# package-wrapper

./: LICENSE  README.md  setup.cfg
delivery/: main.py
delivery/archiver/: archiver.py
delivery/manifest/: artifactdb.py  filehash.py  manifest.py
examples/: meta-data.json
examples/example_delivery/binaries/: ex_spl
examples/example_delivery/misc/: suprise
examples/package_dir/: manifest.json
examples/package_dir/docs/generated_docs/: doc1.txt
examples/package_dir/misc/: happy_ascii_art.txt
package_wrapper/: __init__.py  main.py  package.py
package_wrapper/archiver/: archiver.py
package_wrapper/manifest/: filehash.py  manifest.py
tests/: test_archive.py  test_filehash.py  test_manifest.py
