[metadata]
name = tracable_delivery
version = attr: delivery.__version__
author = metr
author_email = engineering@metr.system
description = Packages binary files into a tracable delivery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metr-systems/none_yet
project_urls =
    Bug Tracker = https://github.com/metr-systems/backlog/projects/14
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Raspberry Pi OS

[options]
package_dir=
    = .
packages=find:
python_requires = >=3.6
py_modules= .
install_requires =
    click==8.0.1

#[options.extras_require]
#dev =
#    pytest==6.2.4
#    responses==0.10.12
#    freezegun==1.1.0


[options.packages.find]
where= .
exclude=tests

[options.entry_points]
console_scripts =
    package=delivery.main:package
