[metadata]
name = package-wrapper
version = attr: delivery.__version__
author = Johan Lund
author_email = johan.h.lund@gmail.com
description = Packages files into a tracable delivery with file hashes for each file contained in a manifest file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jhlund/package-wrapper
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License

[options]
package_dir=
    = .
packages=find:
python_requires = >=3.6
py_modules= .
install_requires =
    click==8.0.1

[options.packages.find]
where= .
exclude=tests

[options.entry_points]
console_scripts =
    pkgwrap=package_wrapper.main:package
